--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="cta">
       <a class="btn js-cta" href="https://buy.stripe.com/14A3cubyk3H17C67Of6Na07"
          aria-label="Получить доступ за 8,90 евро">Получить доступ за 8,90&nbsp;€</a>
-      <small>Если не зайдёт — вернём деньги в течение 24 часов.</small>
+      <small>Если не зайдёт — верну деньги в течение 24 часов.</small>
       <div class="guarantee">✅ Оплата защищена • Отмена одним кликом</div>
     </div>
 
@@ -117,7 +117,7 @@
     </div>
 
     <section class="trust" aria-label="Блок доверия">
-      <div class="avatar"><img src="thumb1.jpg" alt="Виталий Пузырёв"></div>
+      <div class="avatar"><img src="vp_face.png" alt="Виталий Пузырёв"></div>
       <div class="who">Автор — <strong>Виталий Пузырёв</strong><small>таргетолог и инструктор по GPT</small></div>
       <div class="pay" aria-label="Способы оплаты">
         <span class="label">💳 Оплата:</span>
